src/grammar/.antlr/TyCParser.py
# Generated from /home/shon/PersonalWorkspace/Uni/PPL/assignment1/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'case'", "'continue'", "'default'", 
                     "'else'", "'float'", "'for'", "'if'", "'int'", "'return'", 
                     "'string'", "'struct'", "'switch'", "'void'", "'while'", 
                     "','", "'('", "')'", "'{'", "'}'", "';'", "':'", "'++'", 
                     "'--'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", 
                     "'!'", "'.'" ]

    symbolicNames = [ "<INVALID>", "WS", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "AUTO", "BREAK", "CASE", "CONTINUE", "DEFAULT", "ELSE", 
                      "FLOAT", "FOR", "IF", "INT", "RETURN", "STRING", "STRUCT", 
                      "SWITCH", "VOID", "WHILE", "COMMA", "LEFT_PAREN", 
                      "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "SEMICOLON", 
                      "COLON", "INCREMENT", "DECREMENT", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN_OR_EQUAL", "EQUAL", "NOT_EQUAL", "LOGICAL_AND", 
                      "LOGICAL_OR", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULUS", "LESS_THAN", "GREATER_THAN", 
                      "LOGICAL_NOT", "MEMBER_ACCESS", "ID", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_functionDeclaration = 1
    RULE_returnType = 2
    RULE_parameterList = 3
    RULE_parameter = 4
    RULE_argumentList = 5
    RULE_structDeclaration = 6
    RULE_structMemberList = 7
    RULE_structMember = 8
    RULE_structInit = 9
    RULE_variableDeclaration = 10
    RULE_expression = 11
    RULE_assignmentExpression = 12
    RULE_orExpression = 13
    RULE_andExpression = 14
    RULE_equalityExpression = 15
    RULE_relationalExpression = 16
    RULE_additiveExpression = 17
    RULE_multiplicativeExpression = 18
    RULE_unaryExpression = 19
    RULE_postfixExpression = 20
    RULE_memberExpression = 21
    RULE_memberOrCall = 22
    RULE_postfixIncDec = 23
    RULE_primaryExpression = 24
    RULE_statement = 25
    RULE_lvalue = 26
    RULE_expressionStatement = 27
    RULE_block = 28
    RULE_ifStatement = 29
    RULE_whileStatement = 30
    RULE_forStatement = 31
    RULE_forInit = 32
    RULE_forUpdate = 33
    RULE_switchStatement = 34
    RULE_switchClause = 35
    RULE_caseClause = 36
    RULE_defaultClause = 37
    RULE_returnStatement = 38
    RULE_breakStatement = 39
    RULE_continueStatement = 40

    ruleNames =  [ "program", "functionDeclaration", "returnType", "parameterList", 
                   "parameter", "argumentList", "structDeclaration", "structMemberList", 
                   "structMember", "structInit", "variableDeclaration", 
                   "expression", "assignmentExpression", "orExpression", 
                   "andExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "postfixExpression", "memberExpression", "memberOrCall", 
                   "postfixIncDec", "primaryExpression", "statement", "lvalue", 
                   "expressionStatement", "block", "ifStatement", "whileStatement", 
                   "forStatement", "forInit", "forUpdate", "switchStatement", 
                   "switchClause", "caseClause", "defaultClause", "returnStatement", 
                   "breakStatement", "continueStatement" ]

    EOF = Token.EOF
    WS=1
    BLOCK_COMMENT=2
    LINE_COMMENT=3
    AUTO=4
    BREAK=5
    CASE=6
    CONTINUE=7
    DEFAULT=8
    ELSE=9
    FLOAT=10
    FOR=11
    IF=12
    INT=13
    RETURN=14
    STRING=15
    STRUCT=16
    SWITCH=17
    VOID=18
    WHILE=19
    COMMA=20
    LEFT_PAREN=21
    RIGHT_PAREN=22
    LEFT_BRACE=23
    RIGHT_BRACE=24
    SEMICOLON=25
    COLON=26
    INCREMENT=27
    DECREMENT=28
    LESS_THAN_OR_EQUAL=29
    GREATER_THAN_OR_EQUAL=30
    EQUAL=31
    NOT_EQUAL=32
    LOGICAL_AND=33
    LOGICAL_OR=34
    ASSIGN=35
    PLUS=36
    MINUS=37
    MULTIPLY=38
    DIVIDE=39
    MODULUS=40
    LESS_THAN=41
    GREATER_THAN=42
    LOGICAL_NOT=43
    MEMBER_ACCESS=44
    ID=45
    INTEGER_LITERAL=46
    FLOAT_LITERAL=47
    STRING_LITERAL=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_TOKEN=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def structDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructDeclarationContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructDeclarationContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(TyCParser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184372458496) != 0):
                self.state = 84
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [16]:
                    self.state = 82
                    self.structDeclaration()
                    pass
                elif token in [10, 13, 15, 18, 45]:
                    self.state = 83
                    self.functionDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(TyCParser.ReturnTypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(TyCParser.LEFT_PAREN, 0)

        def parameterList(self):
            return self.getTypedRuleContext(TyCParser.ParameterListContext,0)


        def RIGHT_PAREN(self):
            return self.getToken(TyCParser.RIGHT_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TyCParser.BlockContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_functionDeclaration




    def functionDeclaration(self):

        localctx = TyCParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDeclaration)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.returnType()
                self.state = 92
                self.match(TyCParser.ID)
                self.state = 93
                self.match(TyCParser.LEFT_PAREN)
                self.state = 94
                self.parameterList()
                self.state = 95
                self.match(TyCParser.RIGHT_PAREN)
                self.state = 96
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(TyCParser.ID)
                self.state = 99
                self.match(TyCParser.LEFT_PAREN)
                self.state = 100
                self.parameterList()
                self.state = 101
                self.match(TyCParser.RIGHT_PAREN)
                self.state = 102
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_returnType




    def returnType(self):

        localctx = TyCParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returnType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35184372392960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_parameterList




    def parameterList(self):

        localctx = TyCParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184372130816) != 0):
                self.state = 108
                self.parameter()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 109
                    self.match(TyCParser.COMMA)
                    self.state = 110
                    self.parameter()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_parameter




    def parameter(self):

        localctx = TyCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(TyCParser.INT)
                self.state = 119
                self.match(TyCParser.ID)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(TyCParser.FLOAT)
                self.state = 121
                self.match(TyCParser.ID)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.match(TyCParser.STRING)
                self.state = 123
                self.match(TyCParser.ID)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(TyCParser.ID)
                self.state = 125
                self.match(TyCParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_argumentList




    def argumentList(self):

        localctx = TyCParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 536768245923840) != 0):
                self.state = 128
                self.expression()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 129
                    self.match(TyCParser.COMMA)
                    self.state = 130
                    self.expression()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def structMemberList(self):
            return self.getTypedRuleContext(TyCParser.StructMemberListContext,0)


        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structDeclaration




    def structDeclaration(self):

        localctx = TyCParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(TyCParser.STRUCT)
            self.state = 139
            self.match(TyCParser.ID)
            self.state = 140
            self.match(TyCParser.LEFT_BRACE)
            self.state = 141
            self.structMemberList()
            self.state = 142
            self.match(TyCParser.RIGHT_BRACE)
            self.state = 143
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructMemberContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.SEMICOLON)
            else:
                return self.getToken(TyCParser.SEMICOLON, i)

        def getRuleIndex(self):
            return TyCParser.RULE_structMemberList




    def structMemberList(self):

        localctx = TyCParser.StructMemberListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_structMemberList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184372130816) != 0):
                self.state = 145
                self.structMember()
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 146
                        self.match(TyCParser.SEMICOLON)
                        self.state = 147
                        self.structMember() 
                    self.state = 152
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 153
                self.match(TyCParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structMember




    def structMember(self):

        localctx = TyCParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_structMember)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(TyCParser.INT)
                self.state = 158
                self.match(TyCParser.ID)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(TyCParser.FLOAT)
                self.state = 160
                self.match(TyCParser.ID)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.match(TyCParser.STRING)
                self.state = 162
                self.match(TyCParser.ID)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.match(TyCParser.ID)
                self.state = 164
                self.match(TyCParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_structInit




    def structInit(self):

        localctx = TyCParser.StructInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_structInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(TyCParser.LEFT_BRACE)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 536768245923840) != 0):
                self.state = 168
                self.expression()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 169
                    self.match(TyCParser.COMMA)
                    self.state = 170
                    self.expression()
                    self.state = 175
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 178
            self.match(TyCParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(TyCParser.AUTO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(TyCParser.ExpressionContext,0)


        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def structInit(self):
            return self.getTypedRuleContext(TyCParser.StructInitContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = TyCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 213
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(TyCParser.AUTO)
                self.state = 181
                self.match(TyCParser.ID)
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 182
                    self.match(TyCParser.ASSIGN)
                    self.state = 183
                    self.expression()


                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(TyCParser.INT)
                self.state = 187
                self.match(TyCParser.ID)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 188
                    self.match(TyCParser.ASSIGN)
                    self.state = 189
                    self.expression()


                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 192
                self.match(TyCParser.FLOAT)
                self.state = 193
                self.match(TyCParser.ID)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 194
                    self.match(TyCParser.ASSIGN)
                    self.state = 195
                    self.expression()


                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 198
                self.match(TyCParser.STRING)
                self.state = 199
                self.match(TyCParser.ID)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==35:
                    self.state = 200
                    self.match(TyCParser.ASSIGN)
                    self.state = 201
                    self.expression()

